Fix time-struct related build failure with SunStudio (bug 691453).

Apparently many platforms and compilers, including gcc and intel C,
require both <sys/time.h> and <time.h>. This patch just adds Sun Pro C
to the list of such platforms and compilers.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11557 a1074d23-0009-0410-80fe-cf8c14f379e6